--- a/src/app/toast/toast.component.html
+++ b/src/app/toast/toast.component.html
@@ -1,20 +1,21 @@
 <div class="app-toast">
   <div [@listAnimation]="toastService.toasts.length">
-    <div *ngFor="let toast of toastService.toasts; index as i">
-      <div class="toastr {{toast.type}} mb-3 shadow-lg rounded d-flex">
-        <mdb-icon
-          class="p-2 shadow d-flex align-items-center"
-          fas
-          icon="{{getIcon(toast.type)}}"
-        ></mdb-icon>
-        <p class="toastr-message mr-auto m-2 mb-0 ">{{ toast.message }}</p>
-        <button
-          class="toast-clear border-0 bg-transparent"
-          (click)="toastService.remove(i)"
-        >
-          <mdb-icon class="p-1" fas icon="times"></mdb-icon>
-        </button>
-      </div>
+    <div
+      *ngFor="let toast of toastService.toasts; index as i"
+      class="toastr {{toast.type}} mb-3 shadow-lg rounded d-flex"
+    >
+      <mdb-icon
+        class="p-2 shadow d-flex align-items-center"
+        fas
+        icon="{{getIcon(toast.type)}}"
+      ></mdb-icon>
+      <p class="toastr-message mr-auto m-2 mb-0 ">{{ toast.message }}</p>
+      <button
+        class="toast-clear border-0 bg-transparent"
+        (click)="toastService.remove(i)"
+      >
+        <mdb-icon class="p-1" fas icon="times"></mdb-icon>
+      </button>
     </div>
   </div>
 </div>
